@@ -1,3 +1,5 @@
+if object_id('freetds_dblib_t0013') is not null drop table freetds_dblib_t0013
+go
 create table freetds_dblib_t0013 (i int not null, PigTure image not null)
 go
 insert into freetds_dblib_t0013 values (1, '')
