@@ -1,3 +1,8 @@
+Mon May 11 09:52:26 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/dblib/buffering.h: fix a test
+	* src/dblib/unittests/t0013.c src/dblib/unittests/t0013.sql:
+	- remove table if exixts
+
 Mon May 11 09:24:40 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/ctlib/ct.c: remove warnings and duplicate logs
 
@@ -1531,4 +1536,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog  truncated because of release
 	* ChangeLog-0.82 added because of release
 	
-$Id: ChangeLog,v 1.2783 2009/05/11 07:25:24 freddy77 Exp $
+$Id: ChangeLog,v 1.2784 2009/05/11 07:53:26 freddy77 Exp $
